--- a/style.css
+++ b/style.css
@@ -73,12 +73,13 @@
 }
 
 .start-btn:hover {
-    box-shadow: 0 0 1rem #ffc600;
+    box-shadow: 0 0 2rem #426C37;
+    font-size: 1.7rem;
     background: #1116;
     color: white;
 }
 
-/* // quiz code starts here  */
+/*  quiz code starts here  */
 
 #quiz{
     min-height:100vh;
@@ -91,13 +92,14 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    position: relative;
 }
 .quiz-container{
     background: white;
     width: 80%;
     padding: 40px;
     border-radius: 20px;
-    margin: 30px 0;
+    margin: 30px 0px 150px 0px;
 }
 .option-container > button{
     padding: 10px 20px;
@@ -107,16 +109,75 @@
     border-radius: 10px;
     margin: 5px 0px;
     cursor: pointer;
-    min-width: 80%;
-    max-width: 80%;
+    min-width: 100%;
+    max-width: 100%;
     text-align: left;
     font-family: 'Montserrat', sans-serif;
 }
 
 .option-container > button:hover {
-    box-shadow: 0 0 1rem #00dfa2;
+    box-shadow: 0 0 1rem #426C37;
 }
 .questions-container {
     margin-bottom: 15px;
     font-family: 'Montserrat', sans-serif;
+}
+
+.question-navigation {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+#next-btn {
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    font-family: 'Montserrat',sans-serif;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+}
+#next-btn:hover {
+    box-shadow: 0 0 1rem #426C37;
+}
+#score {
+    color:white;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 1.4rem;
+    letter-spacing: 0.1cm;
+}
+.score-div {
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.tip-div {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    width: 100%;
+    text-align: center;
+    background: aliceblue;
+    padding: 25px;
+    border-radius: 0;
+    position: absolute;
+    bottom: 0;
+}
+
+/* Custom Scrollbar*/
+::-webkit-scrollbar {
+    width: 15px;
+}
+::-webkit-scrollbar-track {
+    background: #d1e5ff;
+}
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(#426C37, #00dfa2, #426C37);
+    border-radius: 5px;
+}
+
+@media (max-width: 674px)
+{
+    .quiz-container{
+        margin: 30px 0px 200px 0px;
+    }
 }
